--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,60 @@
 /* YeyeYeee código aquí */
+*{
+	margin: 0;
+	padding: 0;
+	font-family: 'Asap', sans-serif;
+}
+
+/*ESTILOS HOME*/
+.inicio{
+	background-color: #414143;
+	min-height: 100vh;
+}
+.inicio .caja-logo img{
+	margin-top: 110px;
+	max-width: 70%;
+	margin-left: 30px;
+}
+.inicio .caja-logo h2{
+	width: 100%;
+	font-size: 2,5rem;
+	color: #fcad00;
+	font-weight: 900;
+	margin-bottom: 50px;
+}
+span#addon-email.input-group-addon{
+	padding-left: 11px;
+	padding-right: 11px;
+	border: none;
+	background-color: white;
+}
+span.input-group-addon{
+	background-color: white;
+}
+.inicio button.btn-default{
+	width: 100%;
+	background-color: #fcad00;
+	border: none;
+}
+.inicio div.a-clave a{
+	color: white;
+}
+.inicio div.row.text-center.registro{
+	margin-top: 75px;
+}
+.inicio div.row.text-center.registro p{
+	color: white;
+}
+.inicio div.row.text-center.registro p a{
+	color: #fcad00;
+	font-weight: 700;
+}
+/*FIN ESTILOS HOME*/
 .navbar-brand{
 	margin-left: 125px;
 }
 .navbar-nav{
 	background-color: white;
-	color: black;
 }
 .navbar-toggle .icon-bar {
     display: block;
@@ -16,3 +66,4 @@
 	float:left;
 	margin-left:10px;
 }
+.input-group #addon-usuario
