--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 	padding: 0;
 	font-family: 'Asap', sans-serif;
 }
-
 /*ESTILOS HOME*/
 .inicio{
 	background-color: #414143;
@@ -55,7 +54,7 @@ span.input-group-addon{
 .navbar-brand{
 	margin-left: 30px;
 }
-a.navbar-brand.text-center{
+a.navbar-brand{
 	color: white;
 	font-weight: 700;
 }
@@ -99,3 +98,42 @@ div#bs-example-navbar-collapse-1.navbar-collapse.collapse.in{
 	padding: 10px;
 }
 /*FIN SECCION MENU*/
+/*ESTILOS FAQ*/
+.cuerpo-faq{
+	background-color: #fcad00; 
+}
+div.col-xs-12.text-center.caja-titulo{
+	margin-top: 10vh;
+	height: 40vh;
+}	
+div.col-xs-12.caja-preguntas{
+	background-color: #dcdddf;
+}
+div.col-xs-12.caja-preguntas a{
+	color: black;	
+	margin-top: 10px;
+}
+ul.tabs{
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
+}
+ul.tabs li{
+	background: none;
+	color: #222;
+	display: inline-block;
+	padding: 10px 15px;
+	cursor: pointer;
+}
+ul.tabs li.current{
+	background: #ededed;
+	color: #222;
+}
+.tab-content{
+	display: none;
+	background: #ededed;
+	padding: 15px;
+}
+.tab-content.current{
+	display: inherit;
+}
